--- a/class002/main.css
+++ b/class002/main.css
@@ -16,5 +16,9 @@
 .box {
     width: 100px;
     background: aqua;
-    margin: 30px;
+    padding: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    font-size: 16px;
 }
